# gr-midi

./: CMakeLists.txt  MANIFEST.md
apps/: CMakeLists.txt
cmake/Modules/: GrMiscUtils.cmake  GrPlatform.cmake  GrPython.cmake  GrSwig.cmake  GrTest.cmake  midiConfig.cmake
docs/: CMakeLists.txt  README.midi
docs/doxygen/: CMakeLists.txt  Doxyfile.in  swig_doc.py
docs/doxygen/doxyxml/: __init__.py  base.py  doxyindex.py  text.py
docs/doxygen/other/: group_defs.dox  main_page.dox
grc/: CMakeLists.txt  midi_midi_pdu_sink.xml  midi_midi_pdu_source.xml  midi_midi_sink.xml  midi_midi_source.xml  midi_midi_stream_sink.xml  midi_midi_stream_source.xml
include/midi/: CMakeLists.txt  api.h  midi_pdu_sink.h  midi_pdu_source.h  midi_sink.h  midi_source.h  midi_stream_sink.h  midi_stream_source.h
lib/: .goutputstream-NNQ7RZ  CMakeLists.txt  midi_pdu_sink_impl.cc  midi_pdu_sink_impl.h  midi_pdu_source_impl.cc  midi_pdu_source_impl.h  midi_sink_impl.cc  midi_sink_impl.h  midi_source_impl.cc  midi_source_impl.h  midi_stream_sink_impl.cc  midi_stream_sink_impl.h  midi_stream_source_impl.cc  midi_stream_source_impl.h  qa_midi.cc  qa_midi.h  test_midi.cc
python/: CMakeLists.txt  __init__.py  build_utils.py  build_utils_codes.py  qa_midi_pdu_sink.py  qa_midi_pdu_source.py  qa_midi_sink.py  qa_midi_source.py  qa_midi_stream_sink.py  qa_midi_stream_source.py
swig/: CMakeLists.txt  midi_swig.i
